--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,5 @@ dependencies {
     implementation "android.arch.persistence.room:rxjava2:1.1.1"
 
 
-
-
+    implementation 'com.android.support:mediarouter-v7:28.0.0'
 }
