Fix scrollable issue, add dialog for adding review, add review features

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         </activity>
         <activity android:name=".view.LoginActivity" />
         <activity android:name=".view.MainActivity" />
-        <activity android:name=".view.SingleMovieActivity"></activity>
+        <activity android:name=".view.SingleMovieActivity" />
+        <activity android:name=".view.SingleActorActivity"></activity>
     </application>
 
 </manifest>
